# salesforce-data-modeler

./: .env  .example_env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
pipeline/: export_to_excel.py  json_fields.json  mermaid_erd.py  metadata_export.py  sf_connection.py  sf_to_duckdb.py
